--- a/BlazorAppTest/Components/Account/Pages/Login.razor
+++ b/BlazorAppTest/Components/Account/Pages/Login.razor
@@ -65,8 +65,6 @@
 
     public async Task LoginUser()
     {
-        // This doesn't count login failures towards account lockout
-        // To enable password failures to trigger account lockout, set lockoutOnFailure: true
         var result = await SignInManager.PasswordSignInAsync(Input.Email, Input.Password, Input.RememberMe, lockoutOnFailure: false);
         if (result.Succeeded)
         {
@@ -75,6 +73,8 @@
         }
         else if (result.RequiresTwoFactor)
         {
+            // Logger.LogInformation("User logged in.");
+            // RedirectManager.RedirectTo(ReturnUrl);
             RedirectManager.RedirectTo(
                 "Account/LoginWith2fa",
                 new() { ["returnUrl"] = ReturnUrl, ["rememberMe"] = Input.RememberMe });
