--- a/BlazorAppTest/Components/Account/Pages/Register.razor
+++ b/BlazorAppTest/Components/Account/Pages/Register.razor
@@ -3,6 +3,7 @@
 @using System.ComponentModel.DataAnnotations
 @using System.Text
 @using System.Text.Encodings.Web
+@using BlazorAppTest.Components.Model
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
 @using BlazorAppTest.Data
@@ -14,6 +15,8 @@
 @inject ILogger<Register> Logger
 @inject NavigationManager NavigationManager
 @inject IdentityRedirectManager RedirectManager
+@inject ApplicationDbContext _context
+@inject ToDoContext _ToDoContext
 
 <PageTitle>Register</PageTitle>
 
@@ -39,6 +42,12 @@
                 <label for="confirm-password">Confirm Password</label>
                 <ValidationMessage For="() => Input.ConfirmPassword" class="text-danger" />
             </div>
+           @*<div class="form-floating mb-3">
+                <InputText @bind-Value="Input.Cpr" class="form-control" aria-required="true" placeholder="CPR" />
+                <label for="cpr">CPR</label>
+                <ValidationMessage For="() => Input.Cpr" class="text-danger" />
+            </div> *@
+
             <button type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </EditForm>
     </div>
@@ -71,6 +80,13 @@
         }
 
         Logger.LogInformation("User created a new account with password.");
+
+        // int inputToInt = ToInt(Input.Cpr);
+        // // Create CPR object and save to database
+        // var cpr = new Cpr { Email = Input.Email, CprNumber = inputToInt };
+        // _ToDoContext.Cprs.Add(cpr);
+        // await _ToDoContext.SaveChangesAsync();
+
 
         var userId = await UserManager.GetUserIdAsync(user);
         var code = await UserManager.GenerateEmailConfirmationTokenAsync(user);
@@ -131,5 +147,18 @@
         [Display(Name = "Confirm password")]
         [Compare("Password", ErrorMessage = "The password and confirmation password do not match.")]
         public string ConfirmPassword { get; set; } = "";
+
+        //[Required]
+        //[Display(Name = "CPR")]
+        //public string Cpr { get; set; } = "";
+    }
+
+    public int ToInt(string str)
+    {
+        if (int.TryParse(str, out int result))
+        {
+            return result;
+        }
+        return 0;
     }
 }
